--- a/Paginas/Index.html
+++ b/Paginas/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Prenotazione</title>
-    <link rel="stylesheet" type="text/css" href="index.css"/>
+    <link rel="stylesheet" type="text/css" href="../index.css"/>
     <link rel="icon" href="imagenes/pluma.png">
 </head>
 <body>
